[gd_scene load_steps=3 format=3 uid="uid://7q68kbobko43"]

[ext_resource type="Script" uid="uid://c6q13muthrca7" path="res://menus/options_menu.gd" id="1_6r3ve"]
[ext_resource type="PackedScene" uid="uid://ioo8h6nl1otc" path="res://menus/settings_tab_container.tscn" id="2_wyyb7"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6r3ve")

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -12

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsTabContainer" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_wyyb7")]
layout_mode = 2
size_flags_vertical = 3

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Save and Exit"
